# miniformer

./: .gitattributes  .gitignore  README.md  pyproject.toml
configs/: gait_cfg.json
data/miniformer/gait/jsonl/: gait_all.jsonl
examples/: simple_example.py  time_series_example.py  train_model.py
scripts/gait/: convert_gait.py  run_gait.py  split_gait.py
src/miniformer/: __init__.py
src/miniformer/config/: __init__.py  model_config.py
src/miniformer/model/: __init__.py  attention.py  decoder.py  embedding.py  encoder.py  feedforward.py  seq2seq_transformer.py  transformer.py
src/miniformer/train/: datamodule.py  module.py  train_config.py  trainer.py
src/miniformer/training/: config.py  datamodule.py  module.py  trainer.py
src/miniformer/utils/: __init__.py  logging.py
src/miniformer/visualization/: visualize.py
tests/: test_generation.py  test_model.py  test_training.py
tests/test_integration/: test_checkpoint_save_load.py  test_e2e_classification.py  test_e2e_language_modeling.py  test_e2e_regression.py  test_multi_task_consistency.py  test_trainer_config_compatibility.py  test_utils.py
tests/test_model/: test_attention.py  test_config.py  test_dropout.py  test_fuzzing.py  test_model_features.py  test_persistence.py  test_seq2seq_masks.py  test_training.py  test_training_behavior.py
tests/test_train/: test_datamodule.py  test_module.py  test_train_config.py  test_trainer.py
