[project]
name = "miniformer"
version = "0.1.0"
description = ""
authors = [
    {name = "adi-mish",email = "adimishra545@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.0,<3.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "jupyterlab (>=4.4.3,<5.0.0)"
]

[tool.poetry]
packages = [{include = "miniformer", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
