[project]
name = "miniformer"
version = "0.1.0"
description = "Production-grade, scaled-down Transformer implementation"
authors = [
    {name = "adi-mish", email = "adimishra545@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "numpy>=2.0.0",
    "torch>=2.0.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "jupyterlab>=4.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
    "pytest>=8.4.1,<9.0.0",
    "hypothesis>=6.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[tool.poetry]
packages = [{include = "miniformer", from = "src"}]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
disallow_incomplete_defs = true
